Fix Invalid and Incomplete number of plurals for strings
### Fixes

- incomplete number of plurals
- invalid number of plurals

### Transifex:

- OpenPli translations: https://www.transifex.com/openpli/public/
  - Enigma2 Dashboard: https://www.transifex.com/openpli/enigma2/dashboard/
  - Enigma2 Translate URL: https://www.transifex.com/openpli/enigma2/translate/

### Additional fixes and info

- Chinese traditional (zh_CN) had in it translations from other languages
- Changes from this commit should be revied by translators
- Source language is enigma2.pot file (english)

### How to get source (enigma2.pot)

If you want to create enigma2.pot, remove/unmark enigma2.pot in po/updateallpo.sh:

from:

to:

--- a/po/ar.po
+++ b/po/ar.po
@@ -326,12 +326,12 @@ msgstr[5] "دليل البدايه"
 #, python-format
 msgid "%d wireless network found!"
 msgid_plural "%d wireless networks found!"
-msgstr[0] ""
-msgstr[1] "تم العثور على شبكه لاسلكيه"
-msgstr[2] "تم العثور على شبكه لاسلكيه"
-msgstr[3] "تم العثور على شبكه لاسلكيه"
-msgstr[4] "تم العثور على شبكه لاسلكيه"
-msgstr[5] "تم العثور على شبكه لاسلكيه"
+msgstr[0] "تم العثور على شبكه لاسلكيه"
+msgstr[1] "تم العثور على شبكات لاسلكية"
+msgstr[2] "تم العثور على شبكات لاسلكية"
+msgstr[3] "تم العثور على شبكات لاسلكية"
+msgstr[4] "تم العثور على شبكات لاسلكية"
+msgstr[5] "تم العثور على شبكات لاسلكية"
 
 msgid "%d-%m"
 msgstr ""
@@ -405,12 +405,12 @@ msgstr ""
 #, python-format
 msgid "%s updated package available"
 msgid_plural "%s updated packages available"
-msgstr[0] ""
-msgstr[1] "التحديثات المتاحه"
-msgstr[2] "التحديثات المتاحه"
-msgstr[3] "التحديثات المتاحه"
-msgstr[4] "التحديثات المتاحه"
-msgstr[5] "التحديثات المتاحه"
+msgstr[0] "تتوفر حزمة محدثة"
+msgstr[1] "الحزم المحدثة المتاحة"
+msgstr[2] "الحزم المحدثة المتاحة"
+msgstr[3] "الحزم المحدثة المتاحة"
+msgstr[4] "الحزم المحدثة المتاحة"
+msgstr[5] "الحزم المحدثة المتاحة"
 
 #, fuzzy, python-format
 msgid "%s%% Autoinstalling %s"
@@ -3184,7 +3184,7 @@ msgstr ""
 #, python-format
 msgid "Done - Installed, updated or removed %d package (%s)"
 msgid_plural "Done - Installed, updated or removed %d packages (%s)"
-msgstr[0] ""
+msgstr[0] "تم - تثبيت ، تحديث أو حذف %d الرزم والاخطاء%d "
 msgstr[1] "تم - تثبيت ، تحديث أو حذف %d الرزم والاخطاء%d "
 msgstr[2] "تم - تثبيت ، تحديث أو حذف %d الرزم والاخطاء%d "
 msgstr[3] "تم - تثبيت ، تحديث أو حذف %d الرزم والاخطاء%d "
