--- a/po/cs.po
+++ b/po/cs.po
@@ -208,6 +208,7 @@ msgid_plural "%d channels found"
 msgstr[0] "%d kanál nalezen"
 msgstr[1] "%d kanály nalezeny"
 msgstr[2] "%d kanálů nalezeno"
+msgstr[3] "%d kanálů nalezeno"
 
 #, python-format
 msgid "%d core"
@@ -215,6 +216,7 @@ msgid_plural "%d cores"
 msgstr[0] "%d jádro"
 msgstr[1] "%d jádra"
 msgstr[2] "%d jader"
+msgstr[3] "%d jádra"
 
 #, python-format
 msgid "%d file"
@@ -222,6 +224,7 @@ msgid_plural "%d files"
 msgstr[0] "%d soubor"
 msgstr[1] "%d soubory"
 msgstr[2] "%d souborů"
+msgstr[3] "%d soubory"
 
 #, python-format
 msgid "%d fps"
@@ -233,6 +236,7 @@ msgid_plural "%d hours"
 msgstr[0] "%d hodina"
 msgstr[1] "%d hodiny"
 msgstr[2] "%d hodin"
+msgstr[3] "%d hodiny"
 
 #
 #, python-format
@@ -241,6 +245,7 @@ msgid_plural "%d jobs are running in the background!"
 msgstr[0] "%d úloha běží na pozadí!"
 msgstr[1] "%d úlohy běží na pozadí!"
 msgstr[2] "%d úloh běží na pozadí!"
+msgstr[3] "%d úlohy běží na pozadí!"
 
 #, python-format
 msgid "%d kB"
@@ -261,6 +266,7 @@ msgid_plural "%d minutes"
 msgstr[0] "%d minuta"
 msgstr[1] "%d minuty"
 msgstr[2] "%d minut"
+msgstr[3] "%d minuty"
 
 #, python-format
 msgid "%d minutes"
@@ -277,6 +283,7 @@ msgid_plural "%d pixels wide"
 msgstr[0] "%d pixel široké"
 msgstr[1] "%d pixely široké"
 msgstr[2] "%d pixelů široké"
+msgstr[3] "%d pixely široké"
 
 #, python-format
 msgid "%d sec"
@@ -288,6 +295,7 @@ msgid_plural "%d seconds"
 msgstr[0] "%d sekunda"
 msgstr[1] "%d sekundy"
 msgstr[2] "%d sekund"
+msgstr[3] "%d sekundy"
 
 #
 #, python-format
@@ -296,6 +304,7 @@ msgid_plural "%d subdirectories"
 msgstr[0] "%d podadresář"
 msgstr[1] "%d podadresáře"
 msgstr[2] "%d podadresářů"
+msgstr[3] "%d podadresáře"
 
 #
 #, python-format
@@ -304,6 +313,7 @@ msgid_plural "%d wireless networks found!"
 msgstr[0] "nalezena %d bezdrátová síť!"
 msgstr[1] "nalezeny %d bezdrátové sítě!"
 msgstr[2] "nalezeno %d bezdrátových sítí!"
+msgstr[3] "nalezeny %d bezdrátové sítě!"
 
 msgid "%d-%m"
 msgstr "%d-%m"
@@ -388,6 +398,7 @@ msgid_plural "%s updated packages available"
 msgstr[0] " %s dostupná aktualizace"
 msgstr[1] " %s dostupné aktualizace"
 msgstr[2] " %s dostupných aktualizací"
+msgstr[3] " %s dostupné aktualizace"
 
 #
 #, python-format
@@ -3454,6 +3465,7 @@ msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "Dokončeno - instalován, aktualizován nebo odstraněn %d balíček (%s)"
 msgstr[1] "Dokončeno - instalovány, aktualizovány nebo odstraněny %d balíčky (%s)"
 msgstr[2] "Dokončeno - instalováno, aktualizováno nebo odstraněno %d balíčků (%s)"
+msgstr[3] "Dokončeno - instalovány, aktualizovány nebo odstraněny %d balíčky (%s)"
 
 #
 msgid "Download plugins"
@@ -5482,6 +5494,7 @@ msgid_plural "List version %d, found %d channels"
 msgstr[0] "Seznam verze %d, nalezen %d kanál"
 msgstr[1] "Seznam verze %d, nalezeny %d kanály"
 msgstr[2] "Seznam verze %d, nalezeno %d kanálů"
+msgstr[3] "Seznam verze %d, nalezeny %d kanály"
 
 #
 msgid "Listen to the radio..."
@@ -8267,6 +8280,7 @@ msgid_plural "Scan completed, %d channels found."
 msgstr[0] "Prohledávání dokončeno, byl nalezen %d program."
 msgstr[1] "Prohledávání dokončeno, byly nalezeny %d programy."
 msgstr[2] "Prohledávání dokončeno, bylo nalezeno %d programů."
+msgstr[3] "Prohledávání dokončeno, byly nalezeny %d programy."
 
 #
 msgid "Scan failed!"
@@ -8305,6 +8319,7 @@ msgid_plural "Scanning - %d%% completed"
 msgstr[0] "Prohledávání - %d%% dokončeno"
 msgstr[1] "Prohledávání - %d%% dokončena"
 msgstr[2] "Prohledávání - %d%% dokončeno"
+msgstr[3] "Prohledávání - %d%% dokončena"
 
 #, python-format
 msgid "Scanning completed, %d channel found"
@@ -8312,6 +8327,7 @@ msgid_plural "Scanning completed, %d channels found"
 msgstr[0] "Prohledávání dokončeno, byl nalezen %d program."
 msgstr[1] "Prohledávání dokončeno, byly nalezeny %d programy."
 msgstr[2] "Prohledávání dokončeno, bylo nalezeno %d programů."
+msgstr[3] "Prohledávání dokončeno, byly nalezeny %d programy."
 
 #
 msgid "Scanning failed!"
@@ -11125,6 +11141,7 @@ msgid_plural "Update completed, %d packages were installed."
 msgstr[0] "Aktualizace dokončena. %d balíček byl nainstalován."
 msgstr[1] "Aktualizace dokončena. %d balíčky byly nainstalovány."
 msgstr[2] "Aktualizace dokončena. %d balíčků bylo nainstalováno."
+msgstr[3] "Aktualizace dokončena. %d balíčky byly nainstalovány."
 
 msgid "Update completed. Do you want to reboot your receiver?"
 msgstr "Aktualizace skončila. Chcete restartovat přijímač?"
@@ -13467,6 +13484,7 @@ msgid_plural "with %d errors"
 msgstr[0] "s %d chybou"
 msgstr[1] "se %d chybami"
 msgstr[2] "s %d chybami"
+msgstr[3] "se %d chybami"
 
 msgid "with errors"
 msgstr "s chybami"
