--- a/po/fa.po
+++ b/po/fa.po
@@ -194,16 +194,19 @@ msgstr "%d مگابایت"
 msgid "%d channel found"
 msgid_plural "%d channels found"
 msgstr[0] "%d کانال یافت شد"
+msgstr[1] "%d کانال یافت شد"
 
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d هسته"
+msgstr[1] "%d هسته"
 
 #, python-format
 msgid "%d file"
 msgid_plural "%d files"
 msgstr[0] "%d فایل"
+msgstr[1] "%d فایل"
 
 #, python-format
 msgid "%d fps"
@@ -213,11 +216,13 @@ msgstr "%d fps"
 msgid "%d hour"
 msgid_plural "%d hours"
 msgstr[0] "%d ساعت"
+msgstr[1] "%d ساعت"
 
 #, python-format
 msgid "%d job is running in the background!"
 msgid_plural "%d jobs are running in the background!"
 msgstr[0] "%d عملیات در پس زمینه در حال اجرا است"
+msgstr[1] "%d عملیات در پس زمینه در حال اجرا است"
 
 #, python-format
 msgid "%d kB"
@@ -235,6 +240,7 @@ msgstr "%d دقیقه"
 msgid "%d minute"
 msgid_plural "%d minutes"
 msgstr[0] "%d دقیقه"
+msgstr[1] "%d دقیقه"
 
 #, python-format
 msgid "%d minutes"
@@ -257,16 +263,19 @@ msgstr "%d ثانیه"
 msgid "%d second"
 msgid_plural "%d seconds"
 msgstr[0] "%d ثانیه"
+msgstr[1] "%d ثانیه"
 
 #, fuzzy, python-format
 msgid "%d subdirectory"
 msgid_plural "%d subdirectories"
-msgstr[0] "پوشه root"
+msgstr[0] "فرعی %d"
+msgstr[1] "فرعی %d"
 
 #, fuzzy, python-format
 msgid "%d wireless network found!"
 msgid_plural "%d wireless networks found!"
-msgstr[0] "1 شبکه بدون سیم یافت شد"
+msgstr[0] "%d شبکه بدون سیم یافت شد"
+msgstr[1] "%d شبکه بدون سیم یافت شد"
 
 msgid "%d-%m"
 msgstr "%d-%m"
@@ -338,6 +347,7 @@ msgstr ""
 msgid "%s updated package available"
 msgid_plural "%s updated packages available"
 msgstr[0] "به روز رسانی های در دسترس"
+msgstr[1] "به روز رسانی های در دسترس"
 
 #, fuzzy, python-format
 msgid "%s%% Autoinstalling %s"
@@ -3079,6 +3089,7 @@ msgstr ""
 msgid "Done - Installed, updated or removed %d package (%s)"
 msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "انجام شد ، تعداد %d بسته با %d خطا نصب ، به روز رسانی و یا حذف شد"
+msgstr[1] "انجام شد ، تعداد %d بسته با %d خطا نصب ، به روز رسانی و یا حذف شد"
 
 #, fuzzy
 msgid "Download plugins"
@@ -4906,6 +4917,7 @@ msgstr "نوع لیست"
 msgid "List version %d, found %d channel"
 msgid_plural "List version %d, found %d channels"
 msgstr[0] "لیست نسخه %d ، تعداد %d کانال یافت شد"
+msgstr[1] "لیست نسخه %d ، تعداد %d کانال یافت شد"
 
 #, fuzzy
 msgid "Listen to the radio..."
@@ -7376,6 +7388,7 @@ msgstr ""
 msgid "Scan completed, %d channel found."
 msgid_plural "Scan completed, %d channels found."
 msgstr[0] "اسکن کامل شد ، %d کانال یافت شد"
+msgstr[1] "اسکن کامل شد ، %d کانال یافت شد"
 
 #, fuzzy
 msgid "Scan failed!"
@@ -7412,11 +7425,13 @@ msgstr "در حال اسکن %s"
 msgid "Scanning - %d%% completed"
 msgid_plural "Scanning - %d%% completed"
 msgstr[0] "اسکن کامل شد ، %d کانال یافت شد"
+msgstr[1] "اسکن کامل شد ، %d کانال یافت شد"
 
 #, fuzzy, python-format
 msgid "Scanning completed, %d channel found"
 msgid_plural "Scanning completed, %d channels found"
 msgstr[0] "اسکن کامل شد ، %d کانال یافت شد"
+msgstr[1] "اسکن کامل شد ، %d کانال یافت شد"
 
 msgid "Scanning failed!"
 msgstr "اسکن ناموفق"
