--- a/po/he.po
+++ b/po/he.po
@@ -206,6 +206,8 @@ msgid "%d channel found"
 msgid_plural "%d channels found"
 msgstr[0] "!שירותים נמצאו %d"
 msgstr[1] "!שירותים נמצאו %d"
+msgstr[2] "!שירותים נמצאו %d"
+msgstr[3] "!שירותים נמצאו %d"
 
 #, python-format
 msgid "%d core"
@@ -235,6 +237,8 @@ msgid "%d job is running in the background!"
 msgid_plural "%d jobs are running in the background!"
 msgstr[0] "!עבודות רצות ברקע %d "
 msgstr[1] "!עבודות רצות ברקע %d "
+msgstr[2] "!עבודות רצות ברקע %d "
+msgstr[3] "!עבודות רצות ברקע %d "
 
 #, python-format
 msgid "%d kB"
@@ -284,6 +288,8 @@ msgid "%d subdirectory"
 msgid_plural "%d subdirectories"
 msgstr[0] "התחל תיקיה"
 msgstr[1] "התחל תיקיה"
+msgstr[2] "התחל תיקיה"
+msgstr[3] "התחל תיקיה"
 
 #
 #, fuzzy, python-format
@@ -291,6 +297,8 @@ msgid "%d wireless network found!"
 msgid_plural "%d wireless networks found!"
 msgstr[0] "נמצאה רשת אלחוטית אחת"
 msgstr[1] "נמצאה רשת אלחוטית אחת"
+msgstr[2] "נמצאה רשת אלחוטית אחת"
+msgstr[3] "נמצאה רשת אלחוטית אחת"
 
 msgid "%d-%m"
 msgstr ""
@@ -364,6 +372,8 @@ msgid "%s updated package available"
 msgid_plural "%s updated packages available"
 msgstr[0] "עדכונים זמינים"
 msgstr[1] "עדכונים זמינים"
+msgstr[2] "עדכונים זמינים"
+msgstr[3] "עדכונים זמינים"
 
 #, fuzzy, python-format
 msgid "%s%% Autoinstalling %s"
@@ -3224,6 +3234,8 @@ msgid "Done - Installed, updated or removed %d package (%s)"
 msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "תקלות %d חבילות עם %d בוצע - הותקנו, עודכנו או הוסרו"
 msgstr[1] "תקלות %d חבילות עם %d בוצע - הותקנו, עודכנו או הוסרו"
+msgstr[3] "תקלות %d חבילות עם %d בוצע - הותקנו, עודכנו או הוסרו"
+msgstr[4] "תקלות %d חבילות עם %d בוצע - הותקנו, עודכנו או הוסרו"
 
 #, fuzzy
 msgid "Download plugins"
@@ -7783,6 +7795,8 @@ msgid "Scan completed, %d channel found."
 msgid_plural "Scan completed, %d channels found."
 msgstr[0] "!שירותים נמצאו %d"
 msgstr[1] "!שירותים נמצאו %d"
+msgstr[3] "!שירותים נמצאו %d"
+msgstr[4] "!שירותים נמצאו %d"
 
 #, fuzzy
 msgid "Scan failed!"
