--- a/po/lt.po
+++ b/po/lt.po
@@ -199,6 +199,7 @@ msgid_plural "%d channels found"
 msgstr[0] "surastas %d kanalas"
 msgstr[1] "surasti %d kanalai"
 msgstr[2] "surasta %d kanalų"
+msgstr[3] "surasta %d kanalų"
 
 #, python-format
 msgid "%d core"
@@ -206,6 +207,7 @@ msgid_plural "%d cores"
 msgstr[0] "%d branduolys"
 msgstr[1] "%d branduoliai"
 msgstr[2] "%d branduolių"
+msgstr[3] "%d branduolių"
 
 #, python-format
 msgid "%d file"
@@ -213,6 +215,7 @@ msgid_plural "%d files"
 msgstr[0] "%d failas"
 msgstr[1] "%d failai"
 msgstr[2] "%d failų"
+msgstr[3] "%d failai"
 
 #, python-format
 msgid "%d fps"
@@ -224,6 +227,7 @@ msgid_plural "%d hours"
 msgstr[0] "%d valanda"
 msgstr[1] "%d valandos"
 msgstr[2] "%d valandų"
+msgstr[3] "%d valandas"
 
 #, python-format
 msgid "%d job is running in the background!"
@@ -231,6 +235,7 @@ msgid_plural "%d jobs are running in the background!"
 msgstr[0] "%d užduotys, veikiančios fone!"
 msgstr[1] "%d užduotys veikia fone!"
 msgstr[2] "%d užduočių veikia fone!"
+msgstr[3] "%d užduotys veikia fone!"
 
 #, python-format
 msgid "%d kB"
@@ -250,6 +255,7 @@ msgid_plural "%d minutes"
 msgstr[0] "%d minutė"
 msgstr[1] "%d minutės"
 msgstr[2] "%d minučių"
+msgstr[3] "%d minutės"
 
 #, python-format
 msgid "%d minutes"
@@ -265,6 +271,7 @@ msgid_plural "%d pixels wide"
 msgstr[0] "%d pikselio pločio"
 msgstr[1] "%d pikselių pločio"
 msgstr[2] "%d pikselių pločio"
+msgstr[3] "%d pikselių pločio"
 
 #, python-format
 msgid "%d sec"
@@ -276,6 +283,7 @@ msgid_plural "%d seconds"
 msgstr[0] "%d sekundė"
 msgstr[1] "%d sekundės"
 msgstr[2] "%d sekundžių"
+msgstr[3] "%d sekundės"
 
 #, python-format
 msgid "%d subdirectory"
@@ -283,6 +291,7 @@ msgid_plural "%d subdirectories"
 msgstr[0] "%d pakatalogis"
 msgstr[1] "%d pakatalogiai"
 msgstr[2] "%d pakatalogių"
+msgstr[3] "%d pakatalogiai"
 
 #, python-format
 msgid "%d wireless network found!"
@@ -290,6 +299,7 @@ msgid_plural "%d wireless networks found!"
 msgstr[0] "surastas %d belaidis tinklas!"
 msgstr[1] "surasti %d belaidžiai tinklai!"
 msgstr[2] "surasta %d belaidžių tinklų!"
+msgstr[3] "surasti %d belaidžiai tinklai!"
 
 msgid "%d-%m"
 msgstr "%m-%d"
@@ -368,6 +378,7 @@ msgid_plural "%s updated packages available"
 msgstr[0] "galimas %s paketo atnaujinimas"
 msgstr[1] "galimas %s paketų atnaujinimas"
 msgstr[2] "galimas %s paketų atnaujinimas"
+msgstr[3] "galimas %s paketų atnaujinimas"
 
 #, python-format
 msgid "%s%% Autoinstalling %s"
@@ -3017,6 +3028,7 @@ msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "Baigta - įdiegtas, atnaujintas, ar pašalintas %d paketas (%s)"
 msgstr[1] "Baigta - įdiegti, atnaujinti ar pašalinti %d paketai (%s)"
 msgstr[2] "Baigta - įdiegta,atnaujinta ar pašalinta %d paketų (%s)"
+msgstr[3] "Baigta - įdiegti, atnaujinti ar pašalinti %d paketai (%s)"
 
 msgid "Download plugins"
 msgstr "Parsisiųsti priedus"
@@ -4794,6 +4806,7 @@ msgid_plural "List version %d, found %d channels"
 msgstr[0] "Sąrašo versija %d, rastas %d kanalas"
 msgstr[1] "Sąrašo versija %d, rasti %d kanalai"
 msgstr[2] "Sąrašo versija %d, rasta %d kanalų"
+msgstr[3] "Sąrašo versija %d, rasti %d kanalai"
 
 msgid "Listen to the radio..."
 msgstr "Klausytis radijo..."
@@ -7160,6 +7173,7 @@ msgid_plural "Scan completed, %d channels found."
 msgstr[0] "Paieška baigta, rastas %d kanalas."
 msgstr[1] "Paieška baigta, rasti %d kanalai."
 msgstr[2] "Paieška baigta, rasta %d kanalų."
+msgstr[3] "Paieška baigta, rasti %d kanalai."
 
 msgid "Scan failed!"
 msgstr "Paieška nepavyko!"
@@ -7193,6 +7207,7 @@ msgid_plural "Scanning - %d%% completed"
 msgstr[0] "Vyksta paieška - %d%% baigtas"
 msgstr[1] "Vyksta paieška - %d%% baigti"
 msgstr[2] "Vyksta paieška - %d%% baigta"
+msgstr[3] "Vyksta paieška - %d%% baigti"
 
 #, python-format
 msgid "Scanning completed, %d channel found"
@@ -7200,6 +7215,7 @@ msgid_plural "Scanning completed, %d channels found"
 msgstr[0] "Paieška baigta, rastas %d kanalas"
 msgstr[1] "Paieška baigta, surasti %d kanalai"
 msgstr[2] "Paieška baigta, surasta %d kanalų"
+msgstr[3] "Paieška baigta, surasti %d kanalai"
 
 msgid "Scanning failed!"
 msgstr "Paieška nepavyko!"
@@ -9674,6 +9690,7 @@ msgid_plural "Update completed, %d packages were installed."
 msgstr[0] "Atnaujinta, įdiegtas %d paketas."
 msgstr[1] "Atnaujinta, įdiegti %d paketai."
 msgstr[2] "Atnaujinta, įdiegta %d paketų."
+msgstr[3] "Atnaujinta, įdiegti %d paketai."
 
 msgid "Update completed. Do you want to reboot your receiver?"
 msgstr "Atnaujinta. Ar norite paleisti imtuvą iš naujo?"
@@ -11737,6 +11754,7 @@ msgid_plural "with %d errors"
 msgstr[0] "su %d klaida"
 msgstr[1] "su %d klaidomis"
 msgstr[2] "su %d klaidų"
+msgstr[3] "su %d klaidomis"
 
 msgid "with errors"
 msgstr "su klaidomis"
