--- a/po/pl.po
+++ b/po/pl.po
@@ -198,6 +198,7 @@ msgid_plural "%d channels found"
 msgstr[0] "%d znaleziony kanał"
 msgstr[1] "%d znalezione kanały"
 msgstr[2] "%d znalezionych kanałów"
+msgstr[3] "%d znalezione kanały"
 
 #, python-format
 msgid "%d core"
@@ -205,6 +206,7 @@ msgid_plural "%d cores"
 msgstr[0] "%d rdzeń"
 msgstr[1] "%d rdzenie"
 msgstr[2] "%d rdzeni"
+msgstr[3] "%d rdzenie"
 
 #, python-format
 msgid "%d file"
@@ -212,6 +214,7 @@ msgid_plural "%d files"
 msgstr[0] "%d plik"
 msgstr[1] "%d pliki"
 msgstr[2] "%d plików"
+msgstr[3] "%d pliki"
 
 #, python-format
 msgid "%d fps"
@@ -223,6 +226,7 @@ msgid_plural "%d hours"
 msgstr[0] "%d godzina"
 msgstr[1] "%d godziny"
 msgstr[2] "%d godzin"
+msgstr[3] "%d godziny"
 
 #, python-format
 msgid "%d job is running in the background!"
@@ -230,6 +234,7 @@ msgid_plural "%d jobs are running in the background!"
 msgstr[0] "%d zadanie jest wykonywane w tle!"
 msgstr[1] "%d zadania są wykonywane w tle!"
 msgstr[2] "%d zadań jest wykonywanych w tle!"
+msgstr[3] "%d zadania są wykonywane w tle!"
 
 #, python-format
 msgid "%d kB"
@@ -249,6 +254,7 @@ msgid_plural "%d minutes"
 msgstr[0] "%d minuta"
 msgstr[1] "%d minuty"
 msgstr[2] "%d minut"
+msgstr[3] "%d minuty"
 
 #, python-format
 msgid "%d minutes"
@@ -264,6 +270,7 @@ msgid_plural "%d pixels wide"
 msgstr[0] "%d pikseli"
 msgstr[1] "%d piksele"
 msgstr[2] "%d pikseli"
+msgstr[3] "%d piksele"
 
 #, python-format
 msgid "%d sec"
@@ -275,6 +282,7 @@ msgid_plural "%d seconds"
 msgstr[0] "%d sekunda"
 msgstr[1] "%d sekundy"
 msgstr[2] "%d sekund"
+msgstr[3] "%d sekundy"
 
 #, python-format
 msgid "%d subdirectory"
@@ -282,6 +290,7 @@ msgid_plural "%d subdirectories"
 msgstr[0] "%d podkatalog"
 msgstr[1] "%d podkatalogi"
 msgstr[2] "%d podkatalogów"
+msgstr[3] "%d podkatalogi"
 
 #, python-format
 msgid "%d wireless network found!"
@@ -289,6 +298,7 @@ msgid_plural "%d wireless networks found!"
 msgstr[0] "Znaleziono %d sieć bezprzewodową!"
 msgstr[1] "Znaleziono %d sieci bezprzewodowe!"
 msgstr[2] "Znaleziono %d sieci bezprzewodowych!"
+msgstr[3] "Znaleziono %d sieci bezprzewodowe!"
 
 msgid "%d-%m"
 msgstr ""
@@ -367,6 +377,7 @@ msgid_plural "%s updated packages available"
 msgstr[0] " %s zaktualizowany pakiet dostępny"
 msgstr[1] " %s zaktualizowane pakiety dostępne"
 msgstr[2] " %s zaktualizowanych pakietów dostępnych"
+msgstr[3] " %s zaktualizowane pakiety dostępne"
 
 #, python-format
 msgid "%s%% Autoinstalling %s"
@@ -3024,6 +3035,7 @@ msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "Gotowe - zainstalowano, zaktualizowano lub usunięto %d pakiet (%s)"
 msgstr[1] "Gotowe - zainstalowano, zaktualizowano lub usunięto %d pakiety (%s)"
 msgstr[2] "Gotowe - zainstalowano, zaktualizowano lub usunięto %d pakietów (%s)"
+msgstr[3] "Gotowe - zainstalowano, zaktualizowano lub usunięto %d pakiety (%s)"
 
 msgid "Download plugins"
 msgstr "Pobierz wtyczki"
@@ -4813,6 +4825,7 @@ msgid_plural "List version %d, found %d channels"
 msgstr[0] "Wersja listy %d, znaleziono %d kanał"
 msgstr[1] "Wersja listy %d, znaleziono %d kanały"
 msgstr[2] "Wersja listy %d, znaleziono %d kanałów"
+msgstr[3] "Wersja listy %d, znaleziono %d kanały"
 
 msgid "Listen to the radio..."
 msgstr "Słuchaj radia..."
@@ -7185,6 +7198,7 @@ msgid_plural "Scan completed, %d channels found."
 msgstr[0] "Skanowanie zakończone, znaleziono %d kanał."
 msgstr[1] "Skanowanie zakończone, znaleziono %d kanały."
 msgstr[2] "Skanowanie zakończone, znaleziono %d kanałów."
+msgstr[3] "Skanowanie zakończone, znaleziono %d kanały."
 
 msgid "Scan failed!"
 msgstr "Skanowanie nie powiodło się!"
@@ -7218,6 +7232,7 @@ msgid_plural "Scanning - %d%% completed"
 msgstr[0] "Skanowanie - ukończono %d%%"
 msgstr[1] "Skanowanie - ukończono %d%%"
 msgstr[2] "Skanowanie - ukończono %d%%"
+msgstr[3] "Skanowanie - ukończono %d%%"
 
 #, python-format
 msgid "Scanning completed, %d channel found"
@@ -7225,6 +7240,7 @@ msgid_plural "Scanning completed, %d channels found"
 msgstr[0] "Skanowanie zakończone, znaleziono %d kanał"
 msgstr[1] "Skanowanie zakończone, znaleziono %d kanały"
 msgstr[2] "Skanowanie zakończone, znaleziono %d kanałów"
+msgstr[3] "Skanowanie zakończone, znaleziono %d kanały"
 
 msgid "Scanning failed!"
 msgstr "Skanowanie nie powiodło się!"
@@ -9705,6 +9721,7 @@ msgid_plural "Update completed, %d packages were installed."
 msgstr[0] "Aktualizacja zakończona, zainstalowano %d pakiet."
 msgstr[1] "Aktualizacja zakończona, zainstalowano %d pakiety."
 msgstr[2] "Aktualizacja zakończona, zainstalowano %d pakietów."
+msgstr[3] "Aktualizacja zakończona, zainstalowano %d pakiety."
 
 msgid "Update completed. Do you want to reboot your receiver?"
 msgstr "Aktualizacja zakończona. Czy chcesz zrestartować odbiornik?"
@@ -11768,6 +11785,7 @@ msgid_plural "with %d errors"
 msgstr[0] "z %d błędem"
 msgstr[1] "z %d błędami"
 msgstr[2] "z %d błędami"
+msgstr[3] "z %d błędami"
 
 msgid "with errors"
 msgstr "z błędami"
