--- a/po/ro.po
+++ b/po/ro.po
@@ -194,6 +194,7 @@ msgid "%d channel found"
 msgid_plural "%d channels found"
 msgstr[0] "%d servicii gasite!"
 msgstr[1] "%d servicii gasite!"
+msgstr[2] "%d servicii gasite!"
 
 #, python-format
 msgid "%d core"
@@ -222,6 +223,7 @@ msgid "%d job is running in the background!"
 msgid_plural "%d jobs are running in the background!"
 msgstr[0] "%d lucruri se executa in fundal!"
 msgstr[1] "%d lucruri se executa in fundal!"
+msgstr[2] "%d lucruri se executa in fundal!"
 
 #, python-format
 msgid "%d kB"
@@ -270,12 +272,14 @@ msgid "%d subdirectory"
 msgid_plural "%d subdirectories"
 msgstr[0] "/var director"
 msgstr[1] "/var director"
+msgstr[2] "/var director"
 
 #, fuzzy, python-format
 msgid "%d wireless network found!"
 msgid_plural "%d wireless networks found!"
 msgstr[0] "Wireless Network"
 msgstr[1] "Wireless Network"
+msgstr[2] "Wireless Network"
 
 msgid "%d-%m"
 msgstr ""
@@ -3080,6 +3084,7 @@ msgid "Done - Installed, updated or removed %d package (%s)"
 msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "S-a finalizat instalarea, actualizarea sau stergerea a %d pachete cu %d erori"
 msgstr[1] "S-a finalizat instalarea, actualizarea sau stergerea a %d pachete cu %d erori"
+msgstr[2] "S-a finalizat instalarea, actualizarea sau stergerea a %d pachete cu %d erori"
 
 #, fuzzy
 msgid "Download plugins"
@@ -7376,6 +7381,7 @@ msgid "Scan completed, %d channel found."
 msgid_plural "Scan completed, %d channels found."
 msgstr[0] "%d servicii gasite!"
 msgstr[1] "%d servicii gasite!"
+msgstr[2] "%d servicii gasite!"
 
 #, fuzzy
 msgid "Scan failed!"
