--- a/po/ru.po
+++ b/po/ru.po
@@ -198,6 +198,7 @@ msgid_plural "%d channels found"
 msgstr[0] "%d канал найден"
 msgstr[1] "%d канала найдено"
 msgstr[2] "%d каналов найдено"
+msgstr[3] "%d каналов найдено"
 
 #, python-format
 msgid "%d core"
@@ -205,6 +206,7 @@ msgid_plural "%d cores"
 msgstr[0] "%d ядро"
 msgstr[1] "%d ядра"
 msgstr[2] "%d ядра"
+msgstr[3] "%d ядра"
 
 #, python-format
 msgid "%d file"
@@ -212,6 +214,7 @@ msgid_plural "%d files"
 msgstr[0] "%d файл"
 msgstr[1] "%d файла"
 msgstr[2] "%d файлов"
+msgstr[3] "%d файлов"
 
 #, python-format
 msgid "%d fps"
@@ -223,6 +226,7 @@ msgid_plural "%d hours"
 msgstr[0] "%d час"
 msgstr[1] "%d часа"
 msgstr[2] "%d часов"
+msgstr[3] "%d часов"
 
 #, python-format
 msgid "%d job is running in the background!"
@@ -230,6 +234,7 @@ msgid_plural "%d jobs are running in the background!"
 msgstr[0] "%d выполнение процесса запущено в фоновом режиме!"
 msgstr[1] "%d выполнения процесса запущено в фоновом режиме!"
 msgstr[2] "%d выполнения процессов запущено в фоновом режиме!"
+msgstr[3] "%d выполнения процессов запущено в фоновом режиме!"
 
 #, python-format
 msgid "%d kB"
@@ -249,6 +254,7 @@ msgid_plural "%d minutes"
 msgstr[0] "%d минута"
 msgstr[1] "%d минуты"
 msgstr[2] "%d минут"
+msgstr[3] "%d минут"
 
 #, python-format
 msgid "%d minutes"
@@ -264,6 +270,7 @@ msgid_plural "%d pixels wide"
 msgstr[0] "ширина пикселя %d"
 msgstr[1] "ширина пикселей %d"
 msgstr[2] "ширина пикселей %d"
+msgstr[3] "ширина пикселей %d"
 
 #, python-format
 msgid "%d sec"
@@ -275,6 +282,7 @@ msgid_plural "%d seconds"
 msgstr[0] "%d секунда"
 msgstr[1] "%d секунды"
 msgstr[2] "%d секунд"
+msgstr[3] "%d секунд"
 
 #, python-format
 msgid "%d subdirectory"
@@ -282,6 +290,7 @@ msgid_plural "%d subdirectories"
 msgstr[0] "%d подкаталог"
 msgstr[1] "%d подкаталога"
 msgstr[2] "%d подкаталогов"
+msgstr[3] "%d подкаталогов"
 
 #, python-format
 msgid "%d wireless network found!"
@@ -289,6 +298,7 @@ msgid_plural "%d wireless networks found!"
 msgstr[0] "%d беспроводная сеть найдена!"
 msgstr[1] "%d беспроводные сети найдены!"
 msgstr[2] "%d беспроводных сетей найдено!"
+msgstr[3] "%d беспроводных сетей найдено!"
 
 msgid "%d-%m"
 msgstr "%d-%m"
@@ -367,6 +377,7 @@ msgid_plural "%s updated packages available"
 msgstr[0] "%s обновленный пакет доступен"
 msgstr[1] "%s обновленных пакета доступно"
 msgstr[2] "%s обновленных пакетов доступно"
+msgstr[3] "%s обновленных пакетов доступно"
 
 #, python-format
 msgid "%s%% Autoinstalling %s"
@@ -3013,6 +3024,7 @@ msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "Выполнено - Установлен, обновлен или удален %d пакет (%s)"
 msgstr[1] "Выполнено - Установлено, обновлено или удалено %d пакета (%s)"
 msgstr[2] "Выполнено - Установлено, обновлено или удалено %d пакетов (%s)"
+msgstr[3] "Выполнено - Установлено, обновлено или удалено %d пакетов (%s)"
 
 msgid "Download plugins"
 msgstr "Загрузка плагинов"
@@ -4792,6 +4804,7 @@ msgid_plural "List version %d, found %d channels"
 msgstr[0] "Список версии %d, найден %d канал"
 msgstr[1] "Список версии %d, найдено %d канала"
 msgstr[2] "Список версии %d, найдено %d каналов"
+msgstr[3] "Список версии %d, найдено %d каналов"
 
 msgid "Listen to the radio..."
 msgstr "Прослушивание радио..."
@@ -7162,6 +7175,7 @@ msgid_plural "Scan completed, %d channels found."
 msgstr[0] "Сканирование завершено, %d канал найден"
 msgstr[1] "Сканирование завершено, %d канала найдено"
 msgstr[2] "Сканирование завершено, %d каналов найдено"
+msgstr[3] "Сканирование завершено, %d каналов найдено"
 
 msgid "Scan failed!"
 msgstr "Ошибка сканирования!"
@@ -7195,6 +7209,7 @@ msgid_plural "Scanning - %d%% completed"
 msgstr[0] "Сканирование - %d%% завершено"
 msgstr[1] "Сканирование - %d%% завершено"
 msgstr[2] "Сканирование - %d%% завершено"
+msgstr[3] "Сканирование - %d%% завершено"
 
 #, python-format
 msgid "Scanning completed, %d channel found"
@@ -7202,6 +7217,7 @@ msgid_plural "Scanning completed, %d channels found"
 msgstr[0] "Сканирование завершено, %d канал найден"
 msgstr[1] "Сканирование завершено, %d канала найдено"
 msgstr[2] "Сканирование завершено, %d каналов найдено"
+msgstr[3] "Сканирование завершено, %d каналов найдено"
 
 msgid "Scanning failed!"
 msgstr "Ошибка сканирования!"
@@ -9670,6 +9686,7 @@ msgid_plural "Update completed, %d packages were installed."
 msgstr[0] "Обновление завершено, %d пакет установлен."
 msgstr[1] "Обновление завершено, %d пакета установлено."
 msgstr[2] "Обновление завершено, %d пакетов установлено."
+msgstr[3] "Обновление завершено, %d пакетов установлено."
 
 msgid "Update completed. Do you want to reboot your receiver?"
 msgstr "Обновление завершено. Вы хотите перезагрузить ресивер?"
@@ -11730,6 +11747,7 @@ msgid_plural "with %d errors"
 msgstr[0] "с %d ошибкой"
 msgstr[1] "с %d ошибками"
 msgstr[2] "с %d ошибками"
+msgstr[3] "с %d ошибками"
 
 msgid "with errors"
 msgstr "с ошибками"
