--- a/po/sk.po
+++ b/po/sk.po
@@ -199,6 +199,7 @@ msgid_plural "%d channels found"
 msgstr[0] "%d nájdená stanica"
 msgstr[1] "%d nájdené stanice"
 msgstr[2] "%d nájdených staníc"
+msgstr[3] "%d nájdených staníc"
 
 #, python-format
 msgid "%d core"
@@ -206,6 +207,7 @@ msgid_plural "%d cores"
 msgstr[0] "%d jadro"
 msgstr[1] "%d jadrá"
 msgstr[2] "%d jadier"
+msgstr[3] "%d jadier"
 
 #, python-format
 msgid "%d file"
@@ -213,6 +215,7 @@ msgid_plural "%d files"
 msgstr[0] "%d súbor"
 msgstr[1] "%d súbory"
 msgstr[2] "%d súborov"
+msgstr[3] "%d súborov"
 
 #, python-format
 msgid "%d fps"
@@ -224,6 +227,7 @@ msgid_plural "%d hours"
 msgstr[0] "%d hodina"
 msgstr[1] "%d hodiny"
 msgstr[2] "%d hodín"
+msgstr[3] "%d hodín"
 
 #, python-format
 msgid "%d job is running in the background!"
@@ -231,6 +235,7 @@ msgid_plural "%d jobs are running in the background!"
 msgstr[0] "%d úloha beží na pozadí!"
 msgstr[1] "%d úlohy bežia na pozadí!"
 msgstr[2] "%d úloh beží na pozadí!"
+msgstr[3] "%d úloh beží na pozadí!"
 
 #, python-format
 msgid "%d kB"
@@ -250,6 +255,7 @@ msgid_plural "%d minutes"
 msgstr[0] "%d minúta"
 msgstr[1] "%d minúty"
 msgstr[2] "%d minút"
+msgstr[3] "%d minút"
 
 #, python-format
 msgid "%d minutes"
@@ -265,6 +271,7 @@ msgid_plural "%d pixels wide"
 msgstr[0] "%d pixel široké"
 msgstr[1] "%d pixely široké"
 msgstr[2] "%d pixelov široké"
+msgstr[3] "%d pixelov široké"
 
 #, python-format
 msgid "%d sec"
@@ -276,6 +283,7 @@ msgid_plural "%d seconds"
 msgstr[0] "%d sekunda"
 msgstr[1] "%d sekundy"
 msgstr[2] "%d sekúnd"
+msgstr[3] "%d sekúnd"
 
 #, python-format
 msgid "%d subdirectory"
@@ -283,6 +291,7 @@ msgid_plural "%d subdirectories"
 msgstr[0] "%d podadresár"
 msgstr[1] "%d podadresáre"
 msgstr[2] "%d podadresárov"
+msgstr[3] "%d podadresárov"
 
 #, python-format
 msgid "%d wireless network found!"
@@ -290,6 +299,7 @@ msgid_plural "%d wireless networks found!"
 msgstr[0] "Nájdená %d bezdrôtová sieť!"
 msgstr[1] "Nájdené %d bezdrôtové siete!"
 msgstr[2] "Nájdených %d bezdrôtových sietí!"
+msgstr[3] "Nájdených %d bezdrôtových sietí!"
 
 msgid "%d-%m"
 msgstr "%d-%m"
@@ -368,6 +378,7 @@ msgid_plural "%s updated packages available"
 msgstr[0] "%s aktualizovaný balíček k dispozícii"
 msgstr[1] "%s aktualizované balíčky k dispozícii"
 msgstr[2] "%s aktualizovaných balíčkov k dispozícii"
+msgstr[3] "%s aktualizovaných balíčkov k dispozícii"
 
 #, python-format
 msgid "%s%% Autoinstalling %s"
@@ -3015,6 +3026,7 @@ msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "Hotovo - Nainštalovaný, aktualizovaný alebo odstránený %d balíček (%s)"
 msgstr[1] "Hotovo - Nainštalové, aktualizované alebo odstránené %d balíčky (%s)"
 msgstr[2] "Hotovo - Nainštalovaných, aktualizovaných alebo odstránených %d balíčkov (%s)"
+msgstr[3] "Hotovo - Nainštalovaných, aktualizovaných alebo odstránených %d balíčkov (%s)"
 
 msgid "Download plugins"
 msgstr "Stiahnúť doplnky"
@@ -4802,6 +4814,7 @@ msgid_plural "List version %d, found %d channels"
 msgstr[0] "Nájdený zoznam verzia %d, nájdená %d stanica"
 msgstr[1] "Nájdený zoznam verzia %d, nájdené %d stanice"
 msgstr[2] "Nájdený zoznam verzia %d, nájdených %d staníc"
+msgstr[3] "Nájdený zoznam verzia %d, nájdených %d staníc"
 
 msgid "Listen to the radio..."
 msgstr "Počúvať rádio..."
@@ -7167,6 +7180,7 @@ msgid_plural "Scan completed, %d channels found."
 msgstr[0] "Vyhľadávanie dokončené, %d nájdená stanica."
 msgstr[1] "Vyhľadávanie dokončené, %d nájdené stanice."
 msgstr[2] "Vyhľadávanie dokončené, %d nájdených staníc."
+msgstr[3] "Vyhľadávanie dokončené, %d nájdených staníc."
 
 msgid "Scan failed!"
 msgstr "Vyhľadávanie zlyhalo!"
@@ -7200,6 +7214,7 @@ msgid_plural "Scanning - %d%% completed"
 msgstr[0] "Prehľadávanie %d%% dokončené"
 msgstr[1] "Prehľadávanie %d%% dokončená"
 msgstr[2] "Prehľadávanie %d%% dokončené"
+msgstr[3] "Prehľadávanie %d%% dokončené"
 
 #, python-format
 msgid "Scanning completed, %d channel found"
@@ -7207,6 +7222,7 @@ msgid_plural "Scanning completed, %d channels found"
 msgstr[0] "Prehľadávanie dokončené, bol nájdený %d program"
 msgstr[1] "Prehľadávanie dokončené, boli nájdené %d programy"
 msgstr[2] "Prehľadávanie dokončené, bolo nájdených %d programov"
+msgstr[3] "Prehľadávanie dokončené, bolo nájdených %d programov"
 
 msgid "Scanning failed!"
 msgstr "Prehľadávanie zlyhalo!"
@@ -9685,6 +9701,7 @@ msgid_plural "Update completed, %d packages were installed."
 msgstr[0] "Aktualizácia dokončená, %d balíček bol nainštalovaný."
 msgstr[1] "Aktualizácia dokončená, %d balíčky boli nainštalované."
 msgstr[2] "Aktualizácia dokončená, %d balíčkov bolo nainštalovaných."
+msgstr[3] "Aktualizácia dokončená, %d balíčkov bolo nainštalovaných."
 
 msgid "Update completed. Do you want to reboot your receiver?"
 msgstr "Aktualizácia dokončená. Chcete reštartovať prijímač?"
@@ -11746,6 +11763,7 @@ msgid_plural "with %d errors"
 msgstr[0] "s %d chybou"
 msgstr[1] "s %d chybami"
 msgstr[2] "s %d chybami"
+msgstr[3] "s %d chybami"
 
 msgid "with errors"
 msgstr "s chybami"
