--- a/po/tr.po
+++ b/po/tr.po
@@ -201,16 +201,19 @@ msgstr ""
 msgid "%d channel found"
 msgid_plural "%d channels found"
 msgstr[0] "%d kanal bulundu."
+msgstr[1] "%d kanal bulundu."
 
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d Çekirdek"
+msgstr[1] "%d Çekirdek"
 
 #, python-format
 msgid "%d file"
 msgid_plural "%d files"
 msgstr[0] "%d dosya"
+msgstr[1] "%d dosya"
 
 #, fuzzy, python-format
 msgid "%d fps"
@@ -220,11 +223,13 @@ msgstr "%d dosya"
 msgid "%d hour"
 msgid_plural "%d hours"
 msgstr[0] "%d saat"
+msgstr[1] "%d saat"
 
 #, python-format
 msgid "%d job is running in the background!"
 msgid_plural "%d jobs are running in the background!"
 msgstr[0] "Arka planda %d uygulama çalışıyor."
+msgstr[1] "Arka planda %d uygulama çalışıyor."
 
 #, python-format
 msgid "%d kB"
@@ -242,6 +247,7 @@ msgstr "%d dk"
 msgid "%d minute"
 msgid_plural "%d minutes"
 msgstr[0] "%d dakika"
+msgstr[1] "%d dakika"
 
 #, python-format
 msgid "%d minutes"
@@ -255,6 +261,7 @@ msgstr ""
 msgid "%d pixel wide"
 msgid_plural "%d pixels wide"
 msgstr[0] "%d piksel genişliğinde"
+msgstr[1] "%d piksel genişliğinde"
 
 #, python-format
 msgid "%d sec"
@@ -264,16 +271,19 @@ msgstr ""
 msgid "%d second"
 msgid_plural "%d seconds"
 msgstr[0] "%d saniye"
+msgstr[1] "%d saniye"
 
 #, python-format
 msgid "%d subdirectory"
 msgid_plural "%d subdirectories"
 msgstr[0] "%d alt dizin"
+msgstr[1] "%d alt dizin"
 
 #, python-format
 msgid "%d wireless network found!"
 msgid_plural "%d wireless networks found!"
 msgstr[0] "%d kablosuz ağ bulundu!"
+msgstr[1] "%d kablosuz ağ bulundu!"
 
 msgid "%d-%m"
 msgstr "%d-%m"
@@ -344,6 +354,7 @@ msgstr "Artık %s kullanılmıyor. Bu silinmelidir?"
 msgid "%s updated package available"
 msgid_plural "%s updated packages available"
 msgstr[0] "%s güncellenebilir paket bulundu."
+msgstr[1] "%s güncellenebilir paket bulundu."
 
 #, fuzzy, python-format
 msgid "%s%% Autoinstalling %s"
@@ -3044,6 +3055,7 @@ msgstr ""
 msgid "Done - Installed, updated or removed %d package (%s)"
 msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "Yüklenen, güncellenen veya silinen %d paket (%s)"
+msgstr[1] "Yüklenen, güncellenen veya silinen %d paket (%s)"
 
 msgid "Download plugins"
 msgstr "Eklenti İndir"
@@ -4852,6 +4864,7 @@ msgstr "Liste tipi"
 msgid "List version %d, found %d channel"
 msgid_plural "List version %d, found %d channels"
 msgstr[0] "Liste versiyonu %d, %d kanal dulundu"
+msgstr[1] "Liste versiyonu %d, %d kanal dulundu"
 
 msgid "Listen to the radio..."
 msgstr "Radyo dinleme..."
@@ -7278,6 +7291,7 @@ msgstr "Eklenen SR'leri ara"
 msgid "Scan completed, %d channel found."
 msgid_plural "Scan completed, %d channels found."
 msgstr[0] "Tarama tamamlandı. %d kanal bulundu."
+msgstr[1] "Tarama tamamlandı. %d kanal bulundu."
 
 #, fuzzy
 msgid "Scan failed!"
@@ -7311,11 +7325,13 @@ msgstr "%s Taranıyor..."
 msgid "Scanning - %d%% completed"
 msgid_plural "Scanning - %d%% completed"
 msgstr[0] "Tarama - %d%% tamamlandı."
+msgstr[1] "Tarama - %d%% tamamlandı."
 
 #, python-format
 msgid "Scanning completed, %d channel found"
 msgid_plural "Scanning completed, %d channels found"
 msgstr[0] "Tarama tamamlandı. %d kanal bulundu."
+msgstr[1] "Tarama tamamlandı. %d kanal bulundu."
 
 msgid "Scanning failed!"
 msgstr "Tarama başarısız!"
@@ -9844,6 +9860,7 @@ msgstr "Sadece kanal listesini güncelle"
 msgid "Update completed, %d package was installed."
 msgid_plural "Update completed, %d packages were installed."
 msgstr[0] "Güncelleme tamamlandı. %d paket kuruldu."
+msgstr[1] "Güncelleme tamamlandı. %d paket kuruldu."
 
 msgid "Update completed. Do you want to reboot your receiver?"
 msgstr "Güncelleme tamamlandı. Alıcınızı yeniden başlatmak istiyor musunuz?"
@@ -11920,6 +11937,7 @@ msgstr "Kablosuz Ağ Arayüzü"
 msgid "with %d error"
 msgid_plural "with %d errors"
 msgstr[0] "%d hata ile"
+msgstr[1] "%d hata ile"
 
 msgid "with errors"
 msgstr ""
