--- a/po/uk.po
+++ b/po/uk.po
@@ -199,6 +199,7 @@ msgid_plural "%d channels found"
 msgstr[0] "%d канал знайдений"
 msgstr[1] "%d канала знайдено"
 msgstr[2] "%d каналів знайдено"
+msgstr[3] "%d каналів знайдено"
 
 #, python-format
 msgid "%d core"
@@ -206,6 +207,7 @@ msgid_plural "%d cores"
 msgstr[0] "%d core"
 msgstr[1] "%d cores"
 msgstr[2] "%d cores"
+msgstr[3] "%d cores"
 
 #, python-format
 msgid "%d file"
@@ -213,6 +215,7 @@ msgid_plural "%d files"
 msgstr[0] "%d файл"
 msgstr[1] "%d файла"
 msgstr[2] "%d файлів"
+msgstr[3] "%d файлів"
 
 #, fuzzy, python-format
 msgid "%d fps"
@@ -224,6 +227,7 @@ msgid_plural "%d hours"
 msgstr[0] "%d година"
 msgstr[1] "%d годин"
 msgstr[2] "%d годин"
+msgstr[3] "%d годин"
 
 #, python-format
 msgid "%d job is running in the background!"
@@ -231,6 +235,7 @@ msgid_plural "%d jobs are running in the background!"
 msgstr[0] "%d процес запущений у фоновому режимі!"
 msgstr[1] "%d процеси запущено у фоновому режимі!"
 msgstr[2] "%d процесів запущено у фоновому режимі!"
+msgstr[3] "%d процесів запущено у фоновому режимі!"
 
 #, python-format
 msgid "%d kB"
@@ -250,6 +255,7 @@ msgid_plural "%d minutes"
 msgstr[0] "%d хвилина"
 msgstr[1] "%d хвилини"
 msgstr[2] "%d хвилин"
+msgstr[3] "%d хвилин"
 
 #, python-format
 msgid "%d minutes"
@@ -265,6 +271,7 @@ msgid_plural "%d pixels wide"
 msgstr[0] "%d пікселів в ширину"
 msgstr[1] "%d пікселі в ширину"
 msgstr[2] "%d піксель в ширину"
+msgstr[3] "%d піксель в ширину"
 
 #, python-format
 msgid "%d sec"
@@ -276,6 +283,7 @@ msgid_plural "%d seconds"
 msgstr[0] "%d секунда"
 msgstr[1] "%d секунди"
 msgstr[2] "%d секунд"
+msgstr[3] "%d секунд"
 
 #, python-format
 msgid "%d subdirectory"
@@ -283,6 +291,7 @@ msgid_plural "%d subdirectories"
 msgstr[0] "%d директорія"
 msgstr[1] "%d директорії"
 msgstr[2] "%d директорій"
+msgstr[3] "%d директорій"
 
 #, python-format
 msgid "%d wireless network found!"
@@ -290,6 +299,7 @@ msgid_plural "%d wireless networks found!"
 msgstr[0] "%d бездротова мережа знайдена!"
 msgstr[1] "%d бездротові мережі знайдені!"
 msgstr[2] "%d бездротових мереж знайдено!"
+msgstr[3] "%d бездротових мереж знайдено!"
 
 msgid "%d-%m"
 msgstr "%d-%m"
@@ -362,6 +372,7 @@ msgid_plural "%s updated packages available"
 msgstr[0] "%s оновлений пакет доступний"
 msgstr[1] "%s оновлених пакета доступно"
 msgstr[2] "%s оновлених пакетів доступно"
+msgstr[3] "%s оновлених пакетів доступно"
 
 #, fuzzy, python-format
 msgid "%s%% Autoinstalling %s"
@@ -3072,6 +3083,7 @@ msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "Виконано - Встановлено, оновлений або видалений %d пакет (%s)"
 msgstr[1] "Виконано - Встановлено, оновлено або видалено %d пакета (%s)"
 msgstr[2] "Виконано - Встановлено, оновлено або видалено %d пакетів (%s)"
+msgstr[3] "Виконано - Встановлено, оновлено або видалено %d пакетів (%s)"
 
 msgid "Download plugins"
 msgstr "Завантажити плагіни"
@@ -4897,6 +4909,7 @@ msgid_plural "List version %d, found %d channels"
 msgstr[0] "Список версії %d, знайдений %d канал"
 msgstr[1] "Список версії %d, знайдено %d канала"
 msgstr[2] "Список версії %d, знайдено %d каналів"
+msgstr[3] "Список версії %d, знайдено %d каналів"
 
 msgid "Listen to the radio..."
 msgstr "Слухати радіо..."
@@ -7329,6 +7342,7 @@ msgid_plural "Scan completed, %d channels found."
 msgstr[0] "Сканування завершено, %d канал знайдено"
 msgstr[1] "Сканування завершено, %d канала знайдено"
 msgstr[2] "Сканування завершено, %d каналів знайдено"
+msgstr[3] "Сканування завершено, %d каналів знайдено"
 
 #, fuzzy
 msgid "Scan failed!"
@@ -7364,6 +7378,7 @@ msgid_plural "Scanning - %d%% completed"
 msgstr[0] "Сканування - %d%% завершено"
 msgstr[1] "Сканування - %d%% завершено"
 msgstr[2] "Сканування - %d%% завершено"
+msgstr[3] "Сканування - %d%% завершено"
 
 #, python-format
 msgid "Scanning completed, %d channel found"
@@ -7371,6 +7386,7 @@ msgid_plural "Scanning completed, %d channels found"
 msgstr[0] "Сканування завершено, %d канал знайдено"
 msgstr[1] "Сканування завершено, %d канала знайдено"
 msgstr[2] "Сканування завершено, %d каналів знайдено"
+msgstr[3] "Сканування завершено, %d каналів знайдено"
 
 msgid "Scanning failed!"
 msgstr "Помилка сканування!"
@@ -9928,6 +9944,7 @@ msgid_plural "Update completed, %d packages were installed."
 msgstr[0] "Оновлення закінчено, %d пакет встановлений."
 msgstr[1] "Оновлення закінчено, %d пакета встановлено."
 msgstr[2] "Оновлення закінчено, %d пакетів встановлено."
+msgstr[3] "Оновлення закінчено, %d пакетів встановлено."
 
 msgid "Update completed. Do you want to reboot your receiver?"
 msgstr "Оновлення закінчено. Хочете перезавантажити ресивер?"
@@ -12039,6 +12056,7 @@ msgid_plural "with %d errors"
 msgstr[0] "з %d помилкою"
 msgstr[1] "з %d помилками"
 msgstr[2] "з %d помилками"
+msgstr[3] "з %d помилками"
 
 msgid "with errors"
 msgstr "з помилкою"
