--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -201,8 +201,8 @@ msgstr[1] ""
 #, python-format
 msgid "%d file"
 msgid_plural "%d files"
-msgstr[0] "%d file"
-msgstr[1] "%d files"
+msgstr[0] ""
+msgstr[1] ""
 
 #, fuzzy, python-format
 msgid "%d fps"
@@ -211,8 +211,8 @@ msgstr "%d file"
 #, python-format
 msgid "%d hour"
 msgid_plural "%d hours"
-msgstr[0] "%d jam"
-msgstr[1] "%d jam"
+msgstr[0] ""
+msgstr[1] ""
 
 #, python-format
 msgid "%d job is running in the background!"
@@ -235,8 +235,8 @@ msgstr "%d 分鐘"
 #, python-format
 msgid "%d minute"
 msgid_plural "%d minutes"
-msgstr[0] "%d menit"
-msgstr[1] "%d menit"
+msgstr[0] ""
+msgstr[1] ""
 
 #, python-format
 msgid "%d minutes"
@@ -259,8 +259,8 @@ msgstr ""
 #, python-format
 msgid "%d second"
 msgid_plural "%d seconds"
-msgstr[0] "%d detik"
-msgstr[1] "%d detik"
+msgstr[0] ""
+msgstr[1] ""
 
 #, python-format
 msgid "%d subdirectory"
@@ -271,8 +271,8 @@ msgstr[1] ""
 #, python-format
 msgid "%d wireless network found!"
 msgid_plural "%d wireless networks found!"
-msgstr[0] "%d jaringan nirkabel ditemukan!"
-msgstr[1] "%d beberapa jaringan nirkabel ditemukan!"
+msgstr[0] ""
+msgstr[1] ""
 
 msgid "%d-%m"
 msgstr ""
@@ -342,8 +342,8 @@ msgstr ""
 #, python-format
 msgid "%s updated package available"
 msgid_plural "%s updated packages available"
-msgstr[0] "%s pembaruan paket tersedia"
-msgstr[1] "%s pembaruan paket-paket tersedia"
+msgstr[0] ""
+msgstr[1] ""
 
 #, fuzzy, python-format
 msgid "%s%% Autoinstalling %s"
@@ -7196,8 +7196,8 @@ msgstr "掃描更多 SR"
 #, fuzzy, python-format
 msgid "Scan completed, %d channel found."
 msgid_plural "Scan completed, %d channels found."
-msgstr[0] "Update completed, %d package was installed."
-msgstr[1] "Update completed, %d packages were installed."
+msgstr[0] ""
+msgstr[1] ""
 
 #, fuzzy
 msgid "Scan failed!"
@@ -9708,8 +9708,8 @@ msgstr ""
 #, python-format
 msgid "Update completed, %d package was installed."
 msgid_plural "Update completed, %d packages were installed."
-msgstr[0] "Update completed, %d package was installed."
-msgstr[1] "Update completed, %d packages were installed."
+msgstr[0] ""
+msgstr[1] ""
 
 msgid "Update completed. Do you want to reboot your receiver?"
 msgstr ""
@@ -11735,8 +11735,8 @@ msgstr ""
 #, python-format
 msgid "with %d error"
 msgid_plural "with %d errors"
-msgstr[0] "with %d error"
-msgstr[1] "with %d errors"
+msgstr[0] ""
+msgstr[1] ""
 
 msgid "with errors"
 msgstr ""
